2008-11-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkstatusicon.[hc]: Add new tooltip api.

2008-11-03  Christian Persch  <chpe@gnome.org>

	Bug 558001 – gtk_icon_view_enable_model_drag_[source|dest] problem

	* gtk/gtkiconview.c: Make gtk_drag_*_add_*_targets() usable with GtkIconView.

2008-11-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 558929 – gtkstatusicon.c: 'event' is a member of the structure

	* gtk/gtkstatusicon.c: Fix the build.

2008-11-02  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimagemenuitem.c: Make it possible to overrule the
	gtk-menu-images setting.

	* gtk/gtkaction.c (connect_proxy): Show the image before adding
	it to the image menu item.

2008-11-01  Tor Lillqvist  <tml@novell.com>

	Bug 558278 - Crash when calling a callback set by
	gdk_add_client_message_filter()

	* gdk/win32/gdkevents-win32.c (apply_event_filters): Rename from
	apply_filters() so that it is clear that this function is for
	GdkEventFilters only.

	(print_event): Print more information for GDK_CLIENT_EVENT events.

	(gdk_event_translate): When handling client filters, don't use
	apply_event_filters(). Use similar code as in the X11 backend,
	although not exactly, as the parameter list and return value
	semantics of gdk_event_translate() is different.

	* tests/testclientmessage.c: New interactive test program to
	verify client message functionality.

	* tests/Makefile.am: Add it.

2008-11-01  Matthias Clasen  <mclasen@redhat.com>

	Bug 409435 – GtkStatusIcon enhancements: DnD, scroll events, 
	middle click, rich tooltips

	* gtk/gtkstatusicon.[hc]: Add support for button press/release and
	scroll events. Patch by Ed Catmur

2008-11-01  Matthias Clasen  <mclasen@redhat.com>

	Bug 322934 – Replace menu's proxy icons with empty space hiding icons

	* gtk/gtkmenu.c (gtk_menu_size_request): Use consistent padding
	regardless of imagees or checks being in the menu. Also add
	padding on the right edge.